2008-08-27  Akira TAGOH  <tagoh@redhat.com>

	* applet/main.c: XIM support.

2008-08-26  Akira TAGOH  <tagoh@redhat.com>

	* utils/imsettings-info.c (main): make default to see the info for IM
	currently running. (Issue#14)

	* data/xinput.sh.in.in: provide the old way to bring up IM and do that
	when dbus session isn't running.

	* data/xinput.sh.in.in: Remove the unnecessary invocation of gconftool.

	* backends/xim/proxy.c (_create_client): fallback to the default IM
	if failed.
	(xim_proxy_client_protocol_real_xim_auth_ng): new.
	(xim_proxy_client_protocol_real_xim_trigger_notify_reply):
	fix a deadlock on finalize.
	(xim_proxy_client_protocol_real_xim_set_im_values_reply): new.
	(xim_proxy_client_protocol_real_xim_get_im_values_reply): Update
	the default IM values.
	(xim_proxy_protocol_real_xim_auth_ng): new.
	(xim_proxy_protocol_real_xim_set_im_values): new.
	(xim_proxy_protocol_real_xim_forward_event): send back to the client
	application if failed.

	* backends/xim/loopback.c (xim_loopback_set_default_im_values): 
	set default IM values.
	(xim_loopback_real_xim_open): initialize the default IM values.

2008-08-22  Akira TAGOH  <akira@tagoh.org>

	* backends/xim/proxy.c (_reconnect): send XIM_ENCODING_NEGOTIATION
	to reconnect.
	(xim_proxy_client_protocol_real_xim_open_reply): relink the attribute
	id between the server and clients.
	(xim_proxy_client_protocol_real_xim_encoding_negotiation_reply): 
	relink the encoding between the server and clients.
	(xim_proxy_client_protocol_real_xim_get_im_values_reply): relink
	the attribute id between the server and clients.
	(xim_proxy_client_protocol_real_xim_get_ic_values_reply): likewise.
	(xim_proxy_protocol_real_xim_get_im_values): likewise.
	(xim_proxy_protocol_real_xim_create_ic): likewise.
	(xim_proxy_protocol_real_xim_set_ic_values): likewise.
	(xim_proxy_protocol_real_xim_get_ic_values): likewise.

2008-08-21  Akira TAGOH  <akira@tagoh.org>

	* backends/xim/main.c (imsettings_xim_message_filter): 