@@ -1,0 +1,9 @@
+[Desktop Entry]
+Encoding=UTF-8
+Type=Application
+_Name=IMSettings Applet
+_Comment=IMSettings Applet
+Icon=imsettings-applet.png
+Exec=imsettings-applet
+Terminal=false
+Categories=TrayIcon
